# swift-corelibs-foundation

./: CMakeLists.txt  LinuxMain.swift  Package.swift
CoreFoundation/: CMakeLists.txt
CoreFoundation/Base.subproj/: CFInternal.h  CFKnownLocations.c  CFPlatform.c  CFRuntime.c  CoreFoundation_Prefix.h  ForSwiftFoundationOnly.h
CoreFoundation/NumberDate.subproj/: CFTimeZone.c
CoreFoundation/PlugIn.subproj/: CFBundle.c  CFBundle_Executable.c  CFBundle_Main.c
CoreFoundation/RunLoop.subproj/: CFRunLoop.c  CFSocket.c  CFSocket.h
CoreFoundation/String.subproj/: CFString.h
CoreFoundation/URL.subproj/: CFURL.c  CFURLComponents.c  CFURLSessionInterface.c  CFURLSessionInterface.h
DarwinCompatibilityTests.xcodeproj/: project.pbxproj
Foundation/: CGFloat.swift  CMakeLists.txt  Data.swift  FileManager.swift  NSError.swift  NSGeometry.swift  NSIndexSet.swift  NSObject.swift  NSString.swift  NSURLError.swift  Operation.swift  Scanner.swift  Thread.swift  URLAuthenticationChallenge.swift  URLProtectionSpace.swift
Foundation.xcodeproj/: project.pbxproj
Foundation/URLSession/: BodySource.swift  NativeProtocol.swift  TaskRegistry.swift  URLSession.swift  URLSessionTask.swift
Sources/CoreFoundation/: CFBundle_Main.c  CFPlatform.c  CFTimeZone.c
Sources/Tools/plutil/: CMakeLists.txt  main.swift
TestFoundation/: CMakeLists.txt  TestNSData.swift  TestNSError.swift  TestNSString.swift  TestObjCRuntime.swift  TestOperationQueue.swift  TestThread.swift  TestURL.swift  TestURLSessionRealServer.swift  TestXMLParser.swift  main.swift
Tools/GenerateTestFixtures/: CMakeLists.txt
(+90 files in other folders)
